2000-04-09  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* configure.in: make gnucash.spec configured

	* rpm/gnucash.spec.in: new file, same as old gnucash.spec, but
	with @VERSION@ instead of a hard-coded version number. Removed
	gnucash.spec.

	* src/scm/prefs.scm: make the default field types be description
 	and total

	* src/gnome/window-main.c (gnc_configure_account_tree): set the
	state of the total field

	* src/gnome/account-tree.c: add in the new total field

	* src/gnome/dialog-utils.c: add the new account field key
 	ACCOUNT_TOTAL. This key refers to the account's balance plus the
 	balances of all children. The ACCOUNT_BALANCE key now refers to
 	the balance of the account itself, without children.

2000-04-08  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/scm/report/balance-and-pnl.scm: remove the report description.
	It just looked wierd!

	* src/scm/command-line.scm (gnc:prefs-show-version): use the
	configured version instead of hard-coding it.

	* src/scm/bootstrap.scm.in (gnc:version): configure this guile
	variable with the gnucash version info.

	* src/SplitLedger.c (xaccLoadXferCell): == not = Doh!!!

2000-04-07  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Query.c (PROLOG): move declaration of da and db
	locals into the macros that actually use them. This gets rid
	of some annoying warnings.

	* src/register/numcell.c: added method to set the last number
 	entered.  The next number entered is now the last number + 1.

	* Makefile.in: changed [ -e filename ] to [ -f filename ]

	* src/scm/report.scm: Changed the report format to be a record.

2000-04-05  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* configure.in: removed check for eperl

	* src/reports: removed pathconfig.h.in and Sheet.? (eperl stuff)

	* src/gnome/window-help.c: took out gncReport call (eperl)

	* lib/Makefile.in: took out make dist hack

	* src/register/table-allgui.c: more error checking
